[gd_scene load_steps=71 format=2]

[ext_resource path="res://PICS/Icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://pictures/buttons/play3.png" type="Texture" id=3]
[ext_resource path="res://PICS/Icon (1).png" type="Texture" id=4]
[ext_resource path="res://pictures/buttons/play1.png" type="Texture" id=5]
[ext_resource path="res://pictures/buttons/play2.png" type="Texture" id=6]
[ext_resource path="res://MorosNew.png" type="Texture" id=7]
[ext_resource path="res://pictures/buttons/Extras3.png" type="Texture" id=8]
[ext_resource path="res://pictures/buttons/Settings1.png" type="Texture" id=9]
[ext_resource path="res://pictures/buttons/Exit3.png" type="Texture" id=10]
[ext_resource path="res://pictures/buttons/load1.png" type="Texture" id=11]
[ext_resource path="res://pictures/buttons/load2.png" type="Texture" id=12]
[ext_resource path="res://pictures/buttons/Settings3.png" type="Texture" id=13]
[ext_resource path="res://pictures/buttons/Extras.png" type="Texture" id=14]
[ext_resource path="res://pictures/buttons/Exit1.png" type="Texture" id=15]
[ext_resource path="res://pictures/buttons/Extras2.png" type="Texture" id=16]
[ext_resource path="res://pictures/buttons/settings2.png" type="Texture" id=17]
[ext_resource path="res://pictures/buttons/load3.png" type="Texture" id=18]
[ext_resource path="res://pictures/buttons/Exit2.png" type="Texture" id=19]
[ext_resource path="res://splash.jpg" type="Texture" id=20]
[ext_resource path="res://scenes/splash.gd" type="Script" id=21]
[ext_resource path="res://pictures/buttons/button-play3.png" type="Texture" id=22]
[ext_resource path="res://pictures/buttons/commingsoon1.png" type="Texture" id=23]
[ext_resource path="res://pictures/buttons/frame.png" type="Texture" id=24]
[ext_resource path="res://pictures/buttons/episode1-1.png" type="Texture" id=25]
[ext_resource path="res://pictures/buttons/episode1-2.png" type="Texture" id=26]
[ext_resource path="res://pictures/buttons/commingsoon2.png" type="Texture" id=27]
[ext_resource path="res://pictures/buttons/commingsoon4.png" type="Texture" id=28]
[ext_resource path="res://pictures/buttons/button-play1.png" type="Texture" id=29]
[ext_resource path="res://pictures/buttons/button-play4.png" type="Texture" id=30]
[ext_resource path="res://font/Oswald/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=31]
[ext_resource path="res://scenes/episodes.gd" type="Script" id=32]
[ext_resource path="res://pictures/buttons/episode1-3.png" type="Texture" id=33]
[ext_resource path="res://pictures/buttons/commingsoon3.png" type="Texture" id=34]
[ext_resource path="res://pictures/buttons/button-play2.png" type="Texture" id=35]
[ext_resource path="res://pictures/buttons/Back2.png" type="Texture" id=36]
[ext_resource path="res://pictures/buttons/Back1.png" type="Texture" id=37]
[ext_resource path="res://pictures/buttons/Back3.png" type="Texture" id=38]
[ext_resource path="res://pictures/buttons/delsave4.png" type="Texture" id=39]
[ext_resource path="res://pictures/buttons/delsave2.png" type="Texture" id=40]
[ext_resource path="res://pictures/buttons/delsave1.png" type="Texture" id=41]
[ext_resource path="res://pictures/buttons/delsave3.png" type="Texture" id=42]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=43]
[ext_resource path="res://pictures/buttons/graphics2.png" type="Texture" id=44]
[ext_resource path="res://pictures/buttons/graphics3.png" type="Texture" id=45]
[ext_resource path="res://pictures/buttons/graphics.png" type="Texture" id=46]
[ext_resource path="res://scenes/extras.gd" type="Script" id=47]
[ext_resource path="res://pictures/buttons/Early3.png" type="Texture" id=48]
[ext_resource path="res://pictures/buttons/Early1.png" type="Texture" id=49]
[ext_resource path="res://pictures/buttons/Early2.png" type="Texture" id=50]
[ext_resource path="res://scenes/Graphics.gd" type="Script" id=51]
[ext_resource path="res://pictures/buttons/VsyncOn.png" type="Texture" id=52]
[ext_resource path="res://pictures/buttons/VsyncOn2.png" type="Texture" id=53]
[ext_resource path="res://pictures/buttons/VsyncOff2.png" type="Texture" id=54]
[ext_resource path="res://pictures/buttons/VsyncOff3.png" type="Texture" id=55]
[ext_resource path="res://pictures/buttons/VsyncOff.png" type="Texture" id=56]
[ext_resource path="res://pictures/buttons/VsyncOn3.png" type="Texture" id=57]
[ext_resource path="res://pictures/backgrounds/white.png" type="Texture" id=58]
[ext_resource path="res://sound/Menu_Select_00.wav" type="AudioStream" id=59]
[ext_resource path="res://sound/SoundController.gd" type="Script" id=60]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "back-extras"
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2915.4, 546.455 ), Vector2( -969.673, 560.71 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "back-graphics"
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 950.469, 1627.09 ), Vector2( -966.775, 1627.09 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "back-set"
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -995.253, 1669.85 ), Vector2( -968.88, 568.844 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -962.546, 546.455 ), Vector2( 961.795, 532.201 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "to-extras"
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -970.666, 540.677 ), Vector2( -2887.88, 554.931 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "to-graphics"
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -956.889, 1631.14 ), Vector2( 950.469, 1627.09 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 961.795, 532.201 ), Vector2( -983.928, 553.583 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("episodes/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -962.546, 560.71 ), Vector2( -948.292, 1622.66 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 43
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 31 )
fallback/0 = ExtResource( 31 )

[node name="Control" type="Control" groups=[
"Persist",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.77563
margin_top = -7.55103
margin_right = 3.77563
margin_bottom = -7.55103
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 957.284, 541.658 )
scale = Vector2( 3.08984, 2.23588 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 968.996, 338.976 )
scale = Vector2( 1.07625, 1.13343 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 375.411, 225.645 )
scale = Vector2( 1.05944, 0.880193 )
texture = ExtResource( 7 )

[node name="Settings" type="TextureButton" parent="."]
margin_left = 2.224
margin_top = 743.908
margin_right = 462.224
margin_bottom = 812.908
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extras" type="TextureButton" parent="."]
margin_left = 2.224
margin_top = 828.856
margin_right = 462.224
margin_bottom = 897.856
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 2.22449
margin_top = 919.468
margin_right = 462.224
margin_bottom = 988.468
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="."]
margin_left = 2.224
margin_top = 570.235
margin_right = 462.224
margin_bottom = 639.235
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="TextureButton" parent="."]
margin_left = 2.224
margin_top = 657.071
margin_right = 462.224
margin_bottom = 726.071
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 958.583, 543.272 )
texture = ExtResource( 20 )
script = ExtResource( 21 )

[node name="splash" type="AnimationPlayer" parent="splash"]
anims/fade = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/back-extras = SubResource( 2 )
anims/back-graphics = SubResource( 3 )
anims/back-set = SubResource( 4 )
anims/to-ep = SubResource( 5 )
anims/to-extras = SubResource( 6 )
anims/to-graphics = SubResource( 7 )
anims/to-menu = SubResource( 8 )
anims/to-set = SubResource( 9 )

[node name="settings" type="Control" parent="." groups=[
"Persist",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.77588
margin_top = 1102.44
margin_right = -3.77588
margin_bottom = 1102.44
script = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="settings"]
position = Vector2( 957.284, 541.658 )
scale = Vector2( 3.08984, 2.23588 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="settings"]
visible = false
position = Vector2( 968.996, 338.976 )
scale = Vector2( 1.07625, 1.13343 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="settings"]
position = Vector2( 375.411, 225.645 )
scale = Vector2( 1.05944, 0.880193 )
texture = ExtResource( 7 )

[node name="Graphics" type="TextureButton" parent="settings"]
margin_left = 2.224
margin_top = 570.235
margin_right = 462.224
margin_bottom = 639.235
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 44 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delsave" type="TextureButton" parent="settings"]
margin_left = 2.224
margin_top = 693.133
margin_right = 462.224
margin_bottom = 762.133
texture_normal = ExtResource( 41 )
texture_pressed = ExtResource( 42 )
texture_hover = ExtResource( 40 )
texture_disabled = ExtResource( 39 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="settings"]
margin_left = 2.22449
margin_top = 919.468
margin_right = 462.224
margin_bottom = 988.468
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 36 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="settings"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Extras" type="Control" parent="." groups=[
"Persist",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1928.22
margin_top = 12.7135
margin_right = -1928.22
margin_bottom = 12.7135
script = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Extras"]
position = Vector2( 957.284, 541.658 )
scale = Vector2( 3.08984, 2.23588 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Extras"]
visible = false
position = Vector2( 968.996, 338.976 )
scale = Vector2( 1.07625, 1.13343 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Extras"]
position = Vector2( 375.411, 225.645 )
scale = Vector2( 1.05944, 0.880193 )
texture = ExtResource( 7 )

[node name="early" type="TextureButton" parent="Extras"]
margin_left = 2.224
margin_top = 570.235
margin_right = 462.224
margin_bottom = 639.235
texture_normal = ExtResource( 49 )
texture_pressed = ExtResource( 48 )
texture_hover = ExtResource( 50 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back2" type="TextureButton" parent="Extras"]
margin_left = 2.22449
margin_top = 919.468
margin_right = 462.224
margin_bottom = 988.468
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 36 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Control" parent="." groups=[
"Persist",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1911.27
margin_top = 1093.37
margin_right = 1911.27
margin_bottom = 1093.37
script = ExtResource( 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Graphics"]
position = Vector2( 957.284, 541.658 )
scale = Vector2( 3.08984, 2.23588 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 968.996, 338.976 )
scale = Vector2( 1.07625, 1.13343 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Graphics"]
position = Vector2( 375.411, 225.645 )
scale = Vector2( 1.05944, 0.880193 )
texture = ExtResource( 7 )

[node name="VsyncOff" type="TextureButton" parent="Graphics"]
margin_left = 2.224
margin_top = 570.235
margin_right = 462.224
margin_bottom = 639.235
texture_normal = ExtResource( 56 )
texture_pressed = ExtResource( 55 )
texture_hover = ExtResource( 54 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VsyncOn" type="TextureButton" parent="Graphics"]
visible = false
margin_left = 2.224
margin_top = 570.235
margin_right = 462.224
margin_bottom = 639.235
texture_normal = ExtResource( 52 )
texture_pressed = ExtResource( 57 )
texture_hover = ExtResource( 53 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GBack" type="TextureButton" parent="Graphics"]
margin_left = 2.22449
margin_top = 919.468
margin_right = 462.224
margin_bottom = 988.468
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 36 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="episodes" type="Control" parent="."]
anchor_right = 0.021
margin_left = 1923.83
margin_right = 1923.51
margin_bottom = 40.0
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="episodes"]
position = Vector2( 974.333, 528.959 )
scale = Vector2( 3.08984, 2.23588 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="episodes"]
position = Vector2( 375.411, 225.645 )
scale = Vector2( 1.05944, 0.880193 )
texture = ExtResource( 7 )

[node name="ep1" type="TextureButton" parent="episodes"]
margin_left = 2.224
margin_top = 570.235
margin_right = 462.224
margin_bottom = 639.235
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 26 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="commingsoon" type="TextureButton" parent="episodes"]
margin_left = 2.224
margin_top = 712.235
margin_right = 462.224
margin_bottom = 781.235
disabled = true
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 28 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="episodes"]
margin_left = 1146.22
margin_top = 880.235
margin_right = 1606.22
margin_bottom = 949.235
disabled = true
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 35 )
texture_disabled = ExtResource( 30 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="episodes"]
position = Vector2( 1372, 622 )
scale = Vector2( 0.410371, 0.421482 )
texture = ExtResource( 24 )

[node name="back" type="TextureButton" parent="episodes"]
margin_left = 5.3988
margin_top = 851.926
margin_right = 465.399
margin_bottom = 920.926
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 36 )
texture_disabled = ExtResource( 28 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="episode1" type="Control" parent="episodes"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="episodes/episode1"]
margin_left = 1294.11
margin_top = 418.117
margin_right = 1592.11
margin_bottom = 483.117
custom_fonts/font = SubResource( 10 )
text = "Episode 1"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="episodes/episode1"]
anchor_left = 4.715
anchor_top = -0.689
anchor_right = 4.715
anchor_bottom = -0.689
margin_left = 1246.49
margin_top = 450.331
margin_right = 1270.49
margin_bottom = 474.331
rect_scale = Vector2( 2.5, 2.5 )
button_mask = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="episodes/episode1"]
margin_left = 1252.93
margin_top = 825.407
margin_right = 1512.93
margin_bottom = 847.407
text = "*Episode 1 Is in progress of being made."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note" type="Label" parent="episodes"]
margin_left = 1282.98
margin_top = 512.783
margin_right = 1456.98
margin_bottom = 661.783
text = "There Are 2 Paths Try The Other This Time!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="episodes"]
position = Vector2( -968.88, 568.844 )
current = true

[node name="Sprite" type="Sprite" parent="episodes/Camera2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1912.24, 14.2705 )
scale = Vector2( 30.2842, 17.0543 )
texture = ExtResource( 58 )

[node name="Sprite2" type="Sprite" parent="episodes/Camera2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -4.75659, 1089.31 )
scale = Vector2( 30.2842, 17.0543 )
texture = ExtResource( 58 )

[node name="Sprite3" type="Sprite" parent="episodes/Camera2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1936.03, 9.51379 )
scale = Vector2( 30.2842, 17.0543 )
texture = ExtResource( 58 )

[node name="Node" type="Node" parent="."]
script = ExtResource( 60 )

[node name="MenuClicked" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 59 )

[connection signal="pressed" from="settings/Graphics" to="." method="_on_Graphics_pressed"]
[connection signal="pressed" from="settings/delsave" to="." method="_on_delsave_pressed"]
[connection signal="pressed" from="settings/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Extras/back2" to="." method="_on_back2_pressed"]
[connection signal="pressed" from="Graphics/GBack" to="." method="_on_GBack_pressed"]
[connection signal="pressed" from="episodes/ep1" to="episodes" method="_on_ep1_pressed"]
[connection signal="pressed" from="episodes/play" to="episodes" method="_on_play_pressed"]
[connection signal="pressed" from="episodes/back" to="." method="_on_back_pressed"]
